start Education section - cv

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sarah</title>
+		<title>CV</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="main.css">
 	</head>
@@ -15,8 +15,10 @@
 		</nav>
 		<div class="container">
     		<div class="blurb">
-        		<h1>Hi there.</h1>
-				<p>Here ya go</p>
+        		<h1>Sarah Entwistle</h1>
+				<p>Education</p>
+			        <hr width="75%">
+			        <h4>Northern Illinois University<h4>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
