--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         		<h1>Sarah Entwistle</h1>
 				<p>Education</p>
 			        <hr width="100%">
-			        <h4>Northern Illinois University<h4><plaintext>Aug 2017 - present</plaintext>
+			        <h4>Northern Illinois University<h4>Aug 2017 - present
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
