update education - style/font/info

--- a/index.html
+++ b/index.html
@@ -16,9 +16,19 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Sarah Entwistle</h1>
-				<p>Education</p>
+				<h4>Education</h4>
 			        <hr width="100%">
-			        <h4>Northern Illinois University<h4><h1>Aug 2017 - present<h1>
+							<div style="float:left;"><h5>Northern Illinois University</h5></div>
+              <div style="float:right;"><h6>Aug 2017 - present</h6></div>
+							<div style="clear:both;"/>
+							<p>Masters of Science <br>
+								 Biology - Specialization in Bioinformatics</p>
+							<div style="float:left;"><h5>Northern Illinois University</h5></div>
+              <div style="float:right;"><h6>Aug 2014 - May 2017</h6></div>
+							<div style="clear:both;"/>
+							<p>Bachelors of Science <br>
+								 Major - Biology <br>
+								 Minor - Computer Science</p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
